@@ -118,6 +118,9 @@ PlanLoader::ParseLine(FileLineParser &line)
     } else if (strcmp(key, "idle") == 0) {
         plan.sched_idle = plan.ioprio_idle = true;
         line.ExpectEnd();
+    } else if (strcmp(key, "private_network") == 0) {
+        line.ExpectEnd();
+        plan.private_network = true;
     } else if (strcmp(key, "rlimits") == 0) {
         if (!plan.rlimits.Parse(line.ExpectValueAndEnd()))
             throw std::runtime_error("Failed to parse rlimits");
