@@ -111,6 +111,7 @@ WorkshopWorkplace::Start(EventLoop &event_loop, const WorkshopJob &job,
     p.priority = plan->priority;
     p.sched_idle = plan->sched_idle;
     p.ioprio_idle = plan->ioprio_idle;
+    p.ns.enable_network = plan->private_network;
 
     /* use a per-plan cgroup */
 
